#57 multiyear support (#75)
* upgrde to gradle 8.5

* backend impl

* cleanup

* add test case

* backend get by id change

* add current year to submission years, fix csv bug

* frontend impl

* add  ADR